@startuml
enum Difficulty {
    Easy,
    Normal,
    Difficult,
    Real,
}
class GlobalTransfer {
    + quizName : string
    + audioVolume : float <<get>> <<set>>
}
MonoBehaviour <|-- GlobalTransfer
GlobalTransfer --> "difficulty" Difficulty
GlobalTransfer --> "getGlobalTransfer" GlobalTransfer
@enduml
